2007-04-12  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/util/GregorianCalendar/weekOfYear.java:
	New test.

2007-04-12  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/util/GregorianCalendar/dayOfWeekInMonth.java:
	Comment fix.

2007-04-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/ObjectName/applyJDK6.java:
	Application tests for 1.6.
	* gnu/testlet/javax/management/ObjectName/Parsing.java:
	More parse tests for 1.5.

2007-04-07  Mark Wielaard  <mark@klomp.org>

	* Harness.java (compileStringBase): Add -1.5.

2007-04-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/ObjectName/Parsing.java:
	Parse tests for 1.5.
	* gnu/testlet/javax/management/ObjectName/ParsingJDK6.java:
	Parse tests for 1.6.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/MBeanProxy.java:
	Add MXBean conversion tests.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestC.java:
	Likewise.
	* gnu/testlet/javax/management/MBeanServerInvocationHandler/TestCMXBean.java:
	Likewise.
	
2007-04-05  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/util/GregorianCalendar/dayOfWeekInMonth.java:
	Test in the opposite direction too.

2007-04-05  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/util/GregorianCalendar/first.java:
	Remove "day one is in week one" checks.
	* gnu/testlet/java/util/GregorianCalendar/dayOfWeekInMonth.java:
	New test.

2007-04-03  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/util/Calendar/dstOffset.java: New test.

2007-03-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/testlet/javax/management/openmbean/CompositeDataInvocationHandler/Person.java:
	Interface for testing.
	* gnu/testlet/javax/management/openmbean/CompositeDataInvocationHandler/Test.java:
	Test javax.management.openmbean.CompositeDataInvocationHandler.
	
2007-03-11  Andrew John Hughes  <gnu_andrew@member.fsf.org>
